--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,15 @@
-<h1>Listing users</h1>
+<div>
+    <form action="/home" method="get"><input type="submit" value="Home" class="link-button"/></form>
+</div>
+
+<h2>Listing users</h2>
+
+<%= link_to "New user", "/users/new" %>
 
 <ul>
 <% @users.each do |user| %>
-  <li> <%= user.email %> <%= link_to 'Edit', edit_user_path(user) %> <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <li> <%= user.email %>
+    <%= link_to "Edit", "users/#{user.id}/edit" %>
+    <%= link_to "Destroy", "users/#{user.id}/destroy", onclick: "return confirm('Are you sure?')", data: { turbo_method: "post"} %>
 <% end %>
 </ul>
