--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,28 @@
-<h1>New user</h1>
+<h2>Create new user</h2>
 
-<%= render 'form' %>
+<form method="post" action="/users/create">
+  <div class="field">
+    <label>Username</label><br>
+    <input type="text" name="email">
+  </div>
+
+  <br>
+
+  <div class="field">
+    <label>Password</label><br>
+    <input type="password" name="password">
+  </div>
+
+  <br>
+
+  <div class="field">
+    <label>Private</label><br>
+    <input type="checkbox" name="private">
+  </div>
+
+  <br>
+
+  <div class="actions">
+    <input type="submit" value="Create">
+  </div>
+</form>
