--- a/app/views/docs/get.html.erb
+++ b/app/views/docs/get.html.erb
@@ -3,7 +3,7 @@
         <form action="/folders/<%= @doc.folder_id %>" method="get"><input type="submit" value="Back" class="link-button"/></form>
     </div>
 
-    <% if @doc.user_id == current_user.id %>
+    <% if current_user and @doc.user_id == current_user.id %>
         &nbsp;
         <div>
             <form action="/docs/<%= @doc.id %>/edit" method="get">
