--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,11 @@
+<div class="header">
+    <div>
+        <form action="/login" method="get">
+            <input type="submit" value="Login" class="link-button"/>
+        </form>
+    </div>
+</div>
+
 <h2>Create new user</h2>
 
 <form method="post" action="/users/create">
