--- a/app/views/folders/_header.html.erb
+++ b/app/views/folders/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="header">
     <div>
-        <form action="/home" method="get">
+        <form action="/" method="get">
             <input type="submit" value="Home" class="link-button"/>
             <input type="hidden" name="user_id" value="<%= @folder.user_id %>">
         </form>
