--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,11 @@
 <div class="header">
     <div>
+        <form action="/" method="get">
+            <input type="submit" value="Home" class="link-button"/>
+        </form>
+    </div>
+    &nbsp;
+    <div>
         <form action="/users" method="get"><input type="submit" value="All users" class="link-button"/></form>
     </div>
     &nbsp;
