--- a/app/views/folders/edit.html.erb
+++ b/app/views/folders/edit.html.erb
@@ -4,15 +4,17 @@
 <br>
 
 <form action="/folders/<%= @folder.id %>/save" method="post">
-    Name: <input type="text" name="name" value="<%= @folder.name %>" size="77"/>
+    Name: <input type="text" name="name" value="<%= @folder.name %>" size="80"/>
     <br><br>
-    Parent folder: <select name="parent_folder_id">
-    <% @all_folders.each do |f| %>
-        <% if f.id != @folder.id %>
-            <option value="<%= f.id %>" <%= "selected" if f.id == @folder.parent_folder_id %>> <%= f.name %> </option>
+    <% if @folder.parent_folder_id %>
+        Parent folder: <select name="parent_folder_id">
+        <% @all_folders.each do |f| %>
+            <% if f.id != @folder.id %>
+                <option value="<%= f.id %>" <%= "selected" if f.id == @folder.parent_folder_id %>> <%= f.name %> </option>
+            <% end %>
         <% end %>
+        </select>
+        <br><br>
     <% end %>
-    </select>
-    <br><br>
     <input type="submit"/>
 </form>
