--- a/app/views/docs/new.html.erb
+++ b/app/views/docs/new.html.erb
@@ -4,10 +4,10 @@
 <br>
 
 <form action="/docs/save" method="post">
-    <input type="text" name="doc_name" size="77"/>
+    <input type="text" name="name" size="77"/>
     <br><br>
 
-    <div class="mono"><textarea name="doc_data" cols="80" rows="40"></textarea></div>
+    <div class="mono"><textarea name="data" cols="80" rows="40"></textarea></div>
     <input type="hidden" name="folder_id" value="<%= @folder_id %>">
     <input type="submit"/>
 </form>
