--- a/app/views/folders/_header.html.erb
+++ b/app/views/folders/_header.html.erb
@@ -67,7 +67,7 @@
 
     function keyDownHandlerFolder(e) {
         if (e.keyCode == 37) {
-            document.getElementById('Up').click();
+            document.getElementById('folder-up').click();
         } else if (e.keyCode == 69) {
             showFolderTitleEdit();
         } else if (e.keyCode == 27) {
