--- a/app/views/docs/get.html.erb
+++ b/app/views/docs/get.html.erb
@@ -1,6 +1,8 @@
 <div class="header">
     <div>
         <form action="/folders/<%= @doc.folder_id %>" method="get"><input type="submit" id="Back" value="Back" class="link-button"/></form>
+        <!--- this is for navigation with keys -->
+        <a href="/folders/<%= @doc.folder_id %>" id="document-back"></a>
     </div>
 
     <% if current_user and @doc.user_id == current_user.id %>
@@ -9,6 +11,8 @@
             <form action="/docs/<%= @doc.id %>/edit" method="get">
                 <input type="submit" id="Edit" value="Edit" class="link-button"/>
             </form>
+            <!--- this is for navigation with keys -->
+            <a href="/docs/<%= @doc.id %>/edit" id="document-edit"></a>
         </div>
         &nbsp;
         <div>
@@ -25,15 +29,3 @@
 </div>
 <br>
 <div class="mono"><%= @doc.data %></div>
-
-<script type="text/javascript">
-document.addEventListener("keydown", keyDownTextField, false);
-
-function keyDownTextField(e) {
-    if (e.keyCode == 69) {
-        document.getElementById('Edit').click();
-    } else if (e.keyCode == 37) {
-        document.getElementById('Back').click();
-    }
-}
-</script>
