--- a/app/views/folders/get.html.erb
+++ b/app/views/folders/get.html.erb
@@ -22,12 +22,12 @@
 
 <ul>
 <% if @parent_folder %>
-    <li> <a href="/folders/<%=@parent_folder.id%>" id="folder-up">../</a> </li>
+    <li> <a href="/folders/<%=@parent_folder.id%>" id="folder-up" class="folder-contents">../</a> </li>
 <% end %>
 <% @child_folders.each do |f| %>
-    <li> <a href="/folders/<%=f.id%>"><%= f.name %>/</a> </li>
+    <li> <a href="/folders/<%=f.id%>" class="folder-contents"><%= f.name %>/</a> </li>
 <% end %>
 <% @docs.each do |d| %>
-    <li> <a href="/docs/<%=d.id%>"><%= d.name %></a> </li>
+    <li> <a href="/docs/<%=d.id%>" class="folder-contents"><%= d.name %></a> </li>
 <% end %>
 </ul>
