--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,20 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "application", "data-turbo": "false" %>
     <%= javascript_importmap_tags %>
 
     <script type="text/javascript">
         folderEditing = false;
+        elementInFocusIdx = 0;
+
+        window.addEventListener("load", (event) => {
+            elementInFocusIdx = 0;
+            setFocus("folder-contents", 0);
+        })
+
+        document.addEventListener("keydown", keyDownHandlerFolder, false);
+        document.addEventListener("keyup", keyUpHandlerFolder, false);
 
         function showFolderTitleEdit() {
             folderEditing = true;
@@ -24,8 +33,23 @@
             document.getElementById('folder-title-edit').style.display = "none";
         };
 
-        document.addEventListener("keydown", keyDownHandlerFolder, false);
-        document.addEventListener("keyup", keyUpHandlerFolder, false);
+        function setFocus(className, direction) {
+            contentsList = document.getElementsByClassName(className);
+
+            if (direction == -1) {
+                if (elementInFocusIdx > 0) {
+                    elementInFocusIdx = elementInFocusIdx - 1;
+                }
+            } else if (direction == 1) {
+                if (elementInFocusIdx + 1 < contentsList.length) {
+                    elementInFocusIdx = elementInFocusIdx + 1;
+                }
+            }
+
+            if (elementInFocusIdx < contentsList.length) {
+                contentsList[elementInFocusIdx].focus();
+            }
+        };
 
         function keyDownHandlerFolder(e) {
             if (e.keyCode == 37) {
@@ -45,6 +69,24 @@
                     return;
                 }
 
+                return;
+
+            } else if (e.keyCode == 38) {
+                if (folderEditing) {
+                    return;
+                }
+
+                setFocus("folder-contents", -1);
+                return;
+
+            } else if (e.keyCode == 40) {
+                if (folderEditing) {
+                    return;
+                }
+
+                setFocus("folder-contents", 1);
+                return;
+
             } else if (e.keyCode == 69) {
                 href = document.getElementById('document-edit');
                 if (href != null) {
@@ -53,6 +95,7 @@
                 }
 
                 showFolderTitleEdit();
+                return;
 
             } else if (e.keyCode == 27) {
                 href = document.getElementById('document-back-2');
@@ -62,6 +105,7 @@
                 }
 
                 showFolderTitle();
+                return;
             }
         };
 
