--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,6 +14,6 @@
 <% @users.each do |user| %>
     <li> <%= user.email %>
     <%= link_to "Edit", "users/#{user.id}/edit" %>
-    <%= link_to "Destroy", "users/#{user.id}/destroy", onclick: "return confirm('Are you sure?')", data: { turbo_method: "post"} %>
+    <%= link_to "Destroy", "users/#{user.id}/destroy", onclick: "return confirm('Are you sure?')" %>
 <% end %>
 </ul>
